--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
+    "production": "^0.0.2",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
   }
